Fix spacing issue when button is opened

--- a/src/pages/project/inline-accordion/index.module.css
+++ b/src/pages/project/inline-accordion/index.module.css
@@ -13,7 +13,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    gap: 0.375rem;
+    /* gap: 0.25rem; */
 }
 
 /* Shared styling between disclosure button and panel */
@@ -53,6 +53,7 @@
 }
 .disclosureButton.open{
     opacity: 0.4;
+    padding-right: 0.25rem;
 }
 
 /* Disclosure Panel Styling */
